--- a/Base.css
+++ b/Base.css
@@ -11,7 +11,7 @@ nav
 {
     width: 300px;
     height: 75px;
-    background-color: rgba(127, 255, 212, 0.199);
+    /*background-color: rgba(127, 255, 212, 0.199);*/
     border-radius: 10px;
 }
 
@@ -45,4 +45,9 @@ a:hover
 a:visited
 {
     color: black;
+}
+
+p
+{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
