--- a/Home.css
+++ b/Home.css
@@ -1,6 +1,6 @@
 #qui
 {
-    background-color: rgb(255, 196, 0);
+    background-color: rgba(201, 154, 0, 0.89);
     height: 500px;
     width: auto;
     border-color: black;
@@ -9,4 +9,40 @@
 #moi
 {
     margin: 5px auto 5px auto;
+    padding-top: 5px;
+    width: fit-content;
+    align-items: center;
+}
+
+
+a:link 
+{ 
+ text-decoration:none; 
+} 
+
+ul
+{
+    list-style:none;
+}
+
+.aa
+{
+    background-color: rgba(230, 109, 109, 0.363);
+    padding: 5px 5px 5px 5px;
+    border-radius: 10px;
+}
+
+.aa:hover
+{
+    background-color: rgba(236, 56, 56, 0.795);
+}
+
+img
+{
+    float: left;
+}
+
+p
+{
+    font-size: 20px;
 }
