--- a/Base.css
+++ b/Base.css
@@ -49,6 +49,11 @@ a:visited
     color: black;
 }
 
+a:focus
+{
+    color: black;
+}
+
 p
 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
