--- a/Base.css
+++ b/Base.css
@@ -57,6 +57,7 @@ a:focus
 p
 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: black;
 }
 
 body
